--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Metallica Song Mash</title>
+  <title>Arjona Song Mash</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Elige tu canción favorita de Metallica</h1>
+  <h1>Elige tu canción favorita de Ricardo Arjona</h1>
   <div id="comparison">
     <button id="song1"></button>
     <span>vs</span>
